# ferri

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.release  LICENSE.md  README.md  TUNNEL.md  docker-compose.yaml  justfile  mix.exs
.changelogs/: preamble.md
.changelogs/0.1.5/: summary.md
.changelogs/0.1.6/: summary.md
.changelogs/0.1.7/: summary.md
.changelogs/0.1.8/features/: change.md
.changelogs/0.1.9/features/: change.md
.changelogs/unreleased/: summary.md
.changelogs/unreleased/bug-fixes/: change.md
.changelogs/unreleased/features/: change.md
.github/workflows/: elixir-ci.yml  release-client.yml  release-docker.yml  release-server.yml
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: control_protocol.md
ferri-client/ferri/: Cargo.toml
ferri-client/ferri/assets/: logo.ansi
ferri-client/ferri/src/: main.rs  protocol.rs  proxy.rs  tui.rs
lib/: ferri.ex  ferri_web.ex
lib/ferri/: application.ex  mailer.ex  release.ex  repo.ex  session_supervisor.ex  statistics.ex
lib/ferri/http_listener/: connection.ex  http_listener.ex  parser.ex
lib/ferri/tunnel/: handler.ex  http_listener.ex  listener.ex  registry.ex
lib/ferri_web/: changelog.ex  endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/ferri_web/components/: core_components.ex  layouts.ex
lib/yamux/: frame.ex  handler.ex  session.ex  spec.md  stream.ex
priv/repo/: seeds.exs
scripts/: hello_server.py  install.sh  load_gen.py
test/: test_helper.exs
test/support/: conn_case.ex  data_case.ex
(+21 files in other folders)
