[package]
name = "ferri"
version = "0.1.5"
edition = "2024"

[dependencies]
yamux = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
ansi-to-tui = "7"
httparse = "1"
